# numsim-rvegen

./: .gitignore  CHANGELOG.md  CMakeLists.txt  COMMERCIAL.md  CONTRIBUTING.md  README.md  REFACTORING_PLAN.md
.github/workflows/: ci.yml
apps/: rvegen_cli.cpp
bench/: baseline.txt  dispatch_compare.cpp
cmake/: rvegenConfig.cmake.in
docs/: Doxyfile.in  extending.md
docs/images/: dense_spheres_3d.html  mixed_3d.html
docs/issues/: 107-doxygen-api-reference.md  108-packaging-metadata.md  109-swept-tube-fibres-and-weave.md  110-python-bindings.md  111-mean-field-homogenization.md  112-fibre-orientation-distribution.md  113-per-phase-material-assignment.md  114-voronoi-polycrystals.md  115-stl-ply-mesh-import.md  116-microstructure-statistics.md  117-periodic-mesh-gmsh.md  119-progress-info-wiring.md
examples/: circles_in_unit_box.json  circles_with_voxelize.json  dense_circles_svg.json  dense_spheres_3d.json  dense_spheres_svg3d.json  fe_rve_workflow.json  mixed_2d_svg.json  mixed_3d.json  mixed_3d_svg.json  periodic_circles.json  periodic_ellipses_svg.json  spheres_in_cube.json
include/rvegen/: rvegen.h  types.h
include/rvegen/distributions/: bingham_distribution.h  constant_distribution.h  direction_distribution_base.h  distribution_base.h  normal_distribution.h  oriented_uniform_distribution.h  uniform_real_distribution.h
include/rvegen/generators/: cluster_seeds.h  only_inside_generator.h  periodic_generator.h  random_generator.h  rve_generator_base.h  tow_weave_generator.h  voronoi_generator_2d.h  voronoi_generator_3d.h  weave_generator.h
include/rvegen/homogenization/: homogenize.h  mean_field.h  phase_bridge.h
include/rvegen/inputs/: box_input.h  circle_input.h  ellipse_input.h  mesh_inclusion_input.h  polyline_tube_directional_input.h  polyline_tube_input.h  polyline_tube_oriented_input.h  rectangle_input.h  shape_input_base.h  sphere_input.h
include/rvegen/intersection/: aabb_overlap.h  collision_details.h  collision_dispatcher.h
include/rvegen/io/: mesh_reader.h  ply_reader.h  stl_reader.h  stream_position.h
include/rvegen/json/: parameter_visitor_nlohmann.h
include/rvegen/materials/: linear_elastic.h  material_base.h  void_material.h
include/rvegen/metadata/: info.h
include/rvegen/phase/: phase.h
include/rvegen/postprocess/: gmsh_geo_writer.h  post_process_base.h  statistics_post_process.h  svg_3d_writer.h  svg_writer.h  three_js_writer.h  voxel_grid.h  voxel_writer.h  vtk_legacy_writer.h
include/rvegen/registry/: build.h  register_collisions.h  register_direction_distributions.h  register_distributions.h  register_generators.h  register_inputs.h  register_materials.h  register_meshes.h  register_post_processes.h  register_terminations.h
include/rvegen/schema/: field_list.h
include/rvegen/shapes/: bounding_box_base.h  box.h  box_bounding.h  circle.h  convex_polygon.h  ellipse.h  mesh_inclusion.h  periodic_wraps.h  polyline_tube.h  rectangle.h  rectangle_bounding.h  shape_base.h  shape_pool.h  shape_variant.h  sphere.h  voronoi_cell.h
include/rvegen/statistics/: microstructure_stats.h
include/rvegen/termination/: number_of_inclusions.h  termination_base.h  until_full.h  volume_fraction.h
include/rvegen/visualization/: box_mesh.h  circle_mesh.h  convex_polygon_mesh.h  ellipse_mesh.h  mesh_dispatcher.h  polyline_tube_mesh.h  rectangle_mesh.h  sphere_mesh.h  triangle_mesh.h  voronoi_cell_mesh.h
packaging/: README.md
packaging/conda-forge/recipe/: meta.yaml
packaging/vcpkg/ports/rvegen/: portfile.cmake  usage  vcpkg.json
packaging/vcpkg/versions/: baseline.json
packaging/vcpkg/versions/r-/: rvegen.json
python/: CMakeLists.txt  README.md  pyproject.toml
python/rvegen/: __init__.py
python/src/: rvegen_module.cpp
python/tests/: test_shapes.py
tests/: concurrency_smoke.cpp  end_to_end_smoke.cpp  extra_types_smoke.cpp  full_registry_smoke.cpp  json_visitor_smoke.cpp  mesh_dispatch_test.cpp  new_tree_smoke.cpp  post_process_smoke.cpp  progress_cancel_test.cpp  registry_smoke.cpp  schema_audit_test.cpp  statistical_validation_test.cpp
tests/install_smoke/: CMakeLists.txt  main.cpp
